<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    android:background="@drawable/sky">

    <TextView android:text="@string/acknowledgements" android:layout_width="282dp"
        android:layout_height="45dp"
        android:id="@+id/acknowledgements_text"
        android:textSize="32sp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/dr_lizy_kurian_john"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/dr_lizy_kurian_john_text"
        android:layout_below="@+id/acknowledgements_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:singleLine="false" />

    <TextView android:text="@string/members_of_team_potato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/members_of_team_potato_text"
        android:layout_below="@+id/dr_lizy_kurian_john_text"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/safeen_ali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/safeen_ali_text"
        android:layout_below="@+id/members_of_team_potato_text"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/anthony_elhabr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/anthony_elhabr_text"
        android:layout_below="@+id/safeen_ali_text"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/allison_grabowski"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/allison_grabowski_text"
        android:layout_below="@+id/anthony_elhabr_text"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/ari_levy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/ari_levy_text"
        android:layout_below="@+id/allison_grabowski_text"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/john_wallace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/john_wallace_text"
        android:layout_below="@+id/ari_levy_text"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/james_yao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/james_yao_text"
        android:layout_below="@+id/john_wallace_text"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_acknowledgements"
        android:src="@drawable/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/back_button" />

</RelativeLayout>
