<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    android:background="@drawable/sky"
    android:clickable="false">

    <TextView android:text="@string/profile" android:layout_width="95dp"
        android:layout_height="45dp"
        android:id="@+id/Profile"
        android:textSize="32sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/profile_image"
        android:layout_below="@+id/Profile"
        android:layout_alignLeft="@+id/back_profile"
        android:layout_alignStart="@+id/back_profile"
        android:layout_marginTop="10dp"
        android:longClickable="false"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/textView_name"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/profile_image"
        android:layout_alignLeft="@+id/profile_image"
        android:layout_alignStart="@+id/profile_image"
        android:contentDescription="@string/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/textView_email"
        android:textSize="16sp"
        android:layout_below="@+id/textView_name"
        android:layout_alignLeft="@+id/textView_name"
        android:layout_alignStart="@+id/textView_name"
        android:contentDescription="@string/email" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:contentDescription="@string/history"
        android:id="@+id/button_history"
        android:textSize="12sp"
        android:layout_above="@+id/back_profile"
        android:layout_alignLeft="@+id/back_profile"
        android:layout_alignStart="@+id/back_profile" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_profile"
        android:src="@drawable/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/back_button"/>

</RelativeLayout>
