<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    android:background="@drawable/sky"
    android:clickable="false"
    android:id="@+id/home_layout">
    <!-- home componenet -->
    <TextView android:text="@string/app_name" android:layout_width="132dp"
        android:layout_height="45dp"
        android:id="@+id/AngelNet"
        android:textSize="32sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />
    <!-- home componenet -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="62dp"
        android:contentDescription="@string/angel"
        android:src="@drawable/icon"
        android:layout_below="@+id/Profile"
        android:layout_centerHorizontal="true" />
    <!-- home componenet -->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sign_in"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"/>
    <!-- requests (the one with the map) page -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/map_layout"
        android:layout_alignParentLeft="true"
        android:visibility="gone"
        android:layout_alignParentStart="true">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.MapFragment"/>

    </RelativeLayout>
    <!-- profile page -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/profile_layout"
        android:layout_alignParentLeft="true"
        android:visibility="gone"
        android:layout_alignParentStart="true">

        <TextView android:text="@string/profile" android:layout_width="95dp"
            android:layout_height="45dp"
            android:id="@+id/Profile"
            android:textSize="32sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#000000" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/profile_image"
            android:layout_below="@+id/Profile"
            android:layout_alignLeft="@+id/back_profile"
            android:layout_alignStart="@+id/back_profile"
            android:layout_marginTop="10dp"
            android:longClickable="false"
            android:contentDescription="@string/profile_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textView_name"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/profile_image"
            android:layout_alignLeft="@+id/profile_image"
            android:layout_alignStart="@+id/profile_image"
            android:contentDescription="@string/name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/email"
            android:id="@+id/textView_email"
            android:textSize="16sp"
            android:layout_below="@+id/textView_name"
            android:layout_alignLeft="@+id/textView_name"
            android:layout_alignStart="@+id/textView_name"
            android:contentDescription="@string/email" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:contentDescription="@string/history"
            android:id="@+id/button_history"
            android:textSize="12sp"
            android:layout_above="@+id/back_profile"
            android:layout_alignLeft="@+id/back_profile"
            android:layout_alignStart="@+id/back_profile" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_profile"
            android:src="@drawable/back"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/back_button"/>

    </RelativeLayout>
    <!-- about page -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/about_layout"
        android:layout_alignParentLeft="true"
        android:visibility="gone"
        android:layout_alignParentStart="true">

        <TextView android:text="@string/about" android:layout_width="88dp"
            android:layout_height="45dp"
            android:id="@+id/About"
            android:textSize="32sp"
            android:textColor="#000000"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_guide"
            android:id="@+id/user_guide_btn"
            android:layout_marginBottom="42dp"
            android:layout_above="@+id/terms_and_conditions_btn"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/user_guide"
            android:textSize="12sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:id="@+id/terms_and_conditions_btn"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/terms_and_conditions"
            android:textSize="12sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acknowledgements"
            android:id="@+id/acknowledgements_btn"
            android:layout_marginTop="44dp"
            android:layout_below="@+id/terms_and_conditions_btn"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/acknowledgements"
            android:textSize="12sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_about"
            android:src="@drawable/back"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/back_button" />

    </RelativeLayout>
    <!-- acknowledgements page -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/acknowledgements_layout"
        android:layout_alignParentLeft="true"
        android:visibility="gone"
        android:layout_alignParentStart="true">

        <TextView android:text="@string/acknowledgements" android:layout_width="282dp"
            android:layout_height="45dp"
            android:id="@+id/acknowledgements_text"
            android:textSize="32sp"
            android:textColor="#000000"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView android:text="@string/dr_lizy_kurian_john"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:id="@+id/dr_lizy_kurian_john_text"
            android:layout_below="@+id/acknowledgements_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:singleLine="false" />

        <TextView android:text="@string/members_of_team_potato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:id="@+id/members_of_team_potato_text"
            android:layout_below="@+id/dr_lizy_kurian_john_text"
            android:layout_marginTop="32dp"
            android:layout_centerHorizontal="true" />

        <TextView android:text="@string/safeen_ali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:id="@+id/safeen_ali_text"
            android:layout_below="@+id/members_of_team_potato_text"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true" />

        <TextView android:text="@string/anthony_elhabr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:id="@+id/anthony_elhabr_text"
            android:layout_below="@+id/safeen_ali_text"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true" />

        <TextView android:text="@string/allison_grabowski"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:id="@+id/allison_grabowski_text"
            android:layout_below="@+id/anthony_elhabr_text"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true" />

        <TextView android:text="@string/ari_levy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:id="@+id/ari_levy_text"
            android:layout_below="@+id/allison_grabowski_text"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true" />

        <TextView android:text="@string/john_wallace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:id="@+id/john_wallace_text"
            android:layout_below="@+id/ari_levy_text"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true" />

        <TextView android:text="@string/james_yao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:id="@+id/james_yao_text"
            android:layout_below="@+id/john_wallace_text"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_acknowledgements"
            android:src="@drawable/back"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/back_button" />

    </RelativeLayout>

</RelativeLayout>
